# neoLegacy

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  NOTES.md  README.md  Update-NightlyRelease.ps1  build-linux.sh  configure_cmake.bat  docker-compose.dedicated-server.yml
.gitea/ISSUE_TEMPLATE/: bug_report.yml
.gitea/workflows/: nightly.yml  nightly.yml.rej
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: nightly.yml  pull-request.yml  stable.yml  sync.yml
Minecraft.Client/: AbstractTexturePack.cpp  BeaconRenderer.cpp  BossMobGuiInfo.cpp  BossMobGuiInfo.h  BufferedImage.cpp  CMakeLists.txt  Camera.cpp  Chunk.cpp  ClientConnection.cpp  ClientConnection.h  DispenserBootstrap.h  EntityRenderDispatcher.cpp  EntityRenderDispatcher.h  EntityRenderer.cpp  EntityRenderer.h  EntityTileRenderer.cpp  EntityTracker.cpp  Extrax64Stubs.cpp  FishingHookRenderer.cpp  GameRenderer.cpp  GameRenderer.h  GuardianModel.cpp  GuardianModel.h  GuardianRenderer.cpp  GuardianRenderer.h  Gui.cpp  HumanoidModel.cpp  HumanoidModel.h  ItemFrameRenderer.cpp  ItemInHandRenderer.cpp  LevelRenderer.cpp  LocalPlayer.cpp  LocalPlayer.h  Minecraft.cpp  Minecraft.h  MinecraftServer.cpp  Minimap.cpp  Minimap.h  MobAppearanceParticle.cpp  MobAppearanceParticle.h  (+35 more)
Minecraft.Client/Common/: App_Defines.h  App_enums.h  Console_Awards_enum.h  Consoles_App.cpp  Consoles_App.h  Potion_Macros.h
Minecraft.Client/Common/Audio/: SoundEngine.cpp  SoundEngine.h  SoundNames.cpp
Minecraft.Client/Common/Colours/: ColourTable.cpp
Minecraft.Client/Common/DLC/: DLCManager.cpp  DLCManager.h
Minecraft.Client/Common/GameRules/: AddEnchantmentRuleDefinition.cpp  XboxStructureActionPlaceSpawner.cpp
Minecraft.Client/Common/Media/MediaWindows64/: AchievementsMenu1080.swf  ClassicCraftingMenu720.swf  ClassicCraftingMenuSplit720.swf  InventoryMenu1080.swf  InventoryMenu480.swf  InventoryMenu720.swf  LoadMenu1080.swf  PressStartToPlay1080.swf  SettingsUIMenu1080.swf  SettingsUIMenu480.swf  SettingsUIMenu720.swf  SettingsUIMenuSplit720.swf  skinGraphics.swf  skinInGameLC.swf  skinLC.swf  skinWin.swf
Minecraft.Client/Common/Network/: PlatformNetworkManagerStub.cpp
Minecraft.Client/Common/Tutorial/: ChoiceTask.cpp  FullTutorial.cpp  InfoTask.cpp  Tutorial.cpp  TutorialHint.cpp
Minecraft.Client/Common/UI/: IUIScene_AbstractContainerMenu.cpp  IUIScene_AbstractContainerMenu.h  IUIScene_ClassicCraftingMenu.cpp  IUIScene_ClassicCraftingMenu.h  IUIScene_CraftingMenu.cpp  IUIScene_CreativeMenu.cpp  IUIScene_EnchantingMenu.cpp  IUIScene_InventoryMenu.cpp  IUIScene_PauseMenu.cpp  IUIScene_StartGame.cpp  IUIScene_TradingMenu.cpp  IUIScene_WritingBookMenu.cpp  IUIScene_WritingBookMenu.h  UI.h  UIComponent_PressStartToPlay.cpp  UIComponent_PressStartToPlay.h  UIComponent_TutorialPopup.cpp  UIControl.h  UIControl_AchievementsList.cpp  UIControl_AchievementsList.h  UIControl_Base.cpp  UIControl_Base.h  UIControl_Book.cpp  UIControl_Book.h  UIControl_EnchantmentButton.cpp  UIControl_EnchantmentButton.h  UIControl_Label.cpp  UIControl_Label.h  UIControl_PageFlip.cpp  UIControl_PageFlip.h  UIControl_TextInput.cpp  UIController.cpp  UIController.h  UIEnums.h  UILayer.cpp  UIScene.cpp  UIScene.h  UIScene_AbstractContainerMenu.h  UIScene_AchievementsMenu.cpp  UIScene_AchievementsMenu.h  (+27 more)
Minecraft.Client/Common/XUI/: XUI_Leaderboards.cpp  XUI_TutorialPopup.cpp
Minecraft.Client/Durango/Leaderboards/: DurangoStatsDebugger.cpp
Minecraft.Client/PS3/SPU_Tasks/ChunkUpdate/: BookshelfTile_SPU.h  ButtonTile_SPU.h  ChunkRebuildData.cpp  DiodeTile_SPU.h  FenceGateTile_SPU.h  FenceTile_SPU.cpp  FireTile_SPU.h  FurnaceTile_SPU.h  GrassTile_SPU.cpp  HalfSlabTile_SPU.cpp  LiquidTile_SPU.cpp  Material_SPU.h  MycelTile_SPU.h  PumpkinTile_SPU.h  RailTile_SPU.h  RedStoneDustTile_SPU.h  SignTile_SPU.h  StairTile_SPU.cpp  StemTile_SPU.h  StoneMonsterTile_SPU.h  StoneSlabTile_SPU.h  ThinFenceTile_SPU.cpp
Minecraft.Client/Windows64/: Windows64_Minecraft.cpp
Minecraft.Client/Windows64/Leaderboards/: WindowsLeaderboardManager.cpp  WindowsLeaderboardManager.h
Minecraft.Client/Windows64/Network/: WinsockNetLayer.cpp
Minecraft.Client/Windows64Media/: strings.h
Minecraft.Client/Windows64Media/DLC/Biome Settlers Pack 1/: SkinsBiomeSettlers1.pck
Minecraft.Client/Windows64Media/Tutorial/: Tutorial.pck
Minecraft.Client/Windows64Media/loc/: itemId.json  stringsGeneric.xml  stringsPlatformSpecific.xml
Minecraft.Client/cmake/sources/: Common.cmake  Windows.cmake
Minecraft.Server/: FourKitBridge.cpp  FourKitNatives.cpp  FourKitNatives.h
Minecraft.Server.FourKit/: FourKitHost.Callbacks.cs  Material.cs  NativeBridge.cs
Minecraft.Server.FourKit/Block/: Block.cs  BlockState.cs
Minecraft.Server.FourKit/Chunk/: Chunk.cs
Minecraft.Server.FourKit/Enchantments/: Enchantment.cs  LuckOfTheSeaEnchantment.cs  LureEnchantment.cs
Minecraft.Server.FourKit/Entity/: Player.cs
Minecraft.Server/Security/: IdentityTokenManager.cpp
Minecraft.Server/Windows64/: ServerMain.cpp
Minecraft.Server/cmake/sources/: Common.cmake
Minecraft.World/: AbstractTreeFeature.h  Achievement.cpp  Achievement.h  Achievements.cpp  Achievements.h  AddPaintingPacket.cpp  AddPaintingPacket.h  AgableMob.cpp  AnvilMenu.cpp  ArmorDyeRecipe.cpp  ArmorItem.cpp  ArmorItem.h  ArmorRecipes.cpp  ArmorSlot.cpp  BasePressurePlateTile.cpp  BasePressurePlateTile.h  BaseRailTile.cpp  BaseRailTile.h  BasicTree.cpp  BeaconMenu.cpp  BeaconTileEntity.cpp  BedTile.cpp  BedTile.h  Biome.cpp  Biome.h  BiomeDecorator.cpp  BiomeDecorator.h  BiomeInitLayer.cpp  BiomeInitLayer.h  BiomeSource.cpp  BiomeSource.h  BirchFeature.cpp  Blaze.cpp  BlockStateDecoder.cpp  BlockStateDecoder.h  BlockStateDecoderRegistry.cpp  BlockStateDecoderRegistry.h  Boat.cpp  BoatItem.cpp  BossMob.h  (+397 more)
Minecraft.World/cmake/sources/: Common.cmake
cmake/: CopyAssets.cmake  FxcWineWrapper.sh.in  GenerateItemNameMap.cmake  ServerTarget.cmake
samples/FourKitTestPlugin/: FourKitTestPlugin.cs
tools/ghidra/: .gitignore  ExportLibInfo.java  compare-4jlibs.py  compare-4jlibs.sh  extract_lib.py  list-lib-symbols.sh
(+2 files in other folders)
